Fix textarea sizing in datapoint editor.
Textareas (.entry-long) now flex-grow to fill available space. The previous content-based height is now applied to min-height, so that they don't become too small before scrolling is triggered.

This should greatly improve the experience of using LIT with longer text.

Also fix a minor issue with text wrapping in footer buttons.

PiperOrigin-RevId: 607815280

--- a/lit_nlp/client/modules/datapoint_editor_module.css
+++ b/lit_nlp/client/modules/datapoint_editor_module.css
@@ -133,6 +133,12 @@ select.dropdown {
   min-width: 50px;
 }
 
+#edit-table {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .entry {
   align-items: center;
   box-sizing: border-box;
@@ -142,6 +148,15 @@ select.dropdown {
   margin: 4px;
   padding: 4px;
   border-radius: 4px;
+}
+
+.entry-long {
+  flex-grow: 1;
+  flex-basis: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-flow: column;
 }
 
 .entry-edited {
@@ -154,12 +169,23 @@ select.dropdown {
   justify-content: flex-end;
 }
 
-.entry-content-long {
+.entry-medium .entry-content {
   flex-grow: 1;
-  flex-basis: 100%;
+  max-width: max(50%, 500px);
 }
 
-.entry-content.left-align {
+.entry-long .entry-content {
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+  width: 100%;
+}
+
+.entry-long .entry-content textarea {
+  height: 100%;
+}
+
+.entry-left-align .entry-content {
   justify-content: flex-start;
 }
 
@@ -170,7 +196,6 @@ input {
 
 textarea {
   resize: vertical;
-  height: 100px;
   font-family: 'Roboto', sans;
   line-height: 18px;
   color: var(--lit-gray-800);
